public/css/dashboard.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background-image: linear-gradient(to right, #73b1eb, #32759e, #6a11cb);
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

.navbar {
    width: 100%;
    height: 60px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
}


.title {
    margin-right: auto;
}

.logout {
    font-size: 1.5rem;
}

.main-page {
    padding: 20px;
}

.user-info-container {
    background: #ffffff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    padding: 20px;
    max-width: 400px;
}

.form-container {
    margin-top: 10px;
    background: #ffffff;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    padding: 20px;
    max-width: 400px;
}

.form-field {
    display: flex;
    flex: 1;
    justify-content: space-between;
    margin-bottom: 10px;
}

.display-table {
    margin-top: 10px;
}

.form-buttons {
    margin-top: 10px;
}

.submit-btn {
    padding: 5px;
    background: #6c63ff;
    color: #fff;
    border: none;
    border-radius: 4px;
    font-size: 18px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.logout-btn {
    padding: 5px;
    background: #6c63ff;
    color: #fff;
    border: none;
    border-radius: 4px;
    font-size: 18px;
    cursor: pointer;
    transition: background-color 0.3s ease;


}
.logout-btn:hover {
    background: #5a52e3;
}

.submit-btn:hover {
    background: #5a52e3;
}

.display-container {
    width: 100%;
    border: solid 2px white;
    border-radius: 15px;
    margin-top: 10px;
    padding: 20px;
}

.display-table {
    width: 100%;
}

